@@ -3,13 +3,14 @@ import unittest
 import pytest
 
 import fiona
+from fiona.errors import FionaDeprecationWarning
 
 
 @pytest.mark.usefixtures('uttc_path_gpx')
 class NonCountingLayerTest(unittest.TestCase):
     def setUp(self):
         self.c = fiona.open(self.path_gpx, "r", layer="track_points")
-    
+
     def tearDown(self):
         self.c.close()
 
@@ -22,16 +23,18 @@ class NonCountingLayerTest(unittest.TestCase):
         self.assertEqual(len(features), 19)
 
     def test_getitem(self):
-        feature = self.c[2]
+        self.c[2]
 
     def test_fail_getitem_negative_index(self):
         with self.assertRaises(IndexError):
             self.c[-1]
 
     def test_slice(self):
-        features = self.c[2:5]
-        self.assertEqual(len(features), 3)
+        with pytest.warns(FionaDeprecationWarning):
+            features = self.c[2:5]
+            self.assertEqual(len(features), 3)
 
     def test_fail_slice_negative_index(self):
-        with self.assertRaises(IndexError):
-            self.c[2:-4]
+        with pytest.warns(FionaDeprecationWarning):
+            with self.assertRaises(IndexError):
+                self.c[2:-4]
